--- a/templates/laundry/create_order.html
+++ b/templates/laundry/create_order.html
@@ -1,4 +1,3 @@
-<!-- templates/laundry/create_order.html -->
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 
@@ -14,11 +13,12 @@
                         <i class="fas fa-plus-circle"></i> Register New Laundry Order
                     </h4>
                 </div>
-                
+
                 <form method="post" id="orderForm">
                     {% csrf_token %}
-                    
+
                     <div class="card-body">
+
                         <!-- Customer Information -->
                         <div class="card mb-4">
                             <div class="card-header bg-info text-white">
@@ -26,87 +26,92 @@
                             </div>
                             <div class="card-body">
                                 <div class="row">
-                                    <div class="col-md-6">
-                                        {{ customer_form.name|as_crispy_field }}
-                                    </div>
-                                    <div class="col-md-6">
-                                        {{ customer_form.phone|as_crispy_field }}
-                                    </div>
+                                    <div class="col-md-6">{{ customer_form.name|as_crispy_field }}</div>
+                                    <div class="col-md-6">{{ customer_form.phone|as_crispy_field }}</div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-md-6">
-                                        {{ customer_form.email|as_crispy_field }}
-                                    </div>
-                                    <div class="col-md-6">
-                                        {{ customer_form.address|as_crispy_field }}
-                                    </div>
+                                    <div class="col-md-6">{{ customer_form.email|as_crispy_field }}</div>
+                                    <div class="col-md-6">{{ customer_form.address|as_crispy_field }}</div>
                                 </div>
                             </div>
                         </div>
-                        
-                        <!-- Order Items -->
+
+                        <!-- Laundry Items -->
                         <div class="card mb-4">
                             <div class="card-header bg-warning">
                                 <h5><i class="fas fa-tshirt"></i> Laundry Items</h5>
                             </div>
                             <div class="card-body">
-                                <div id="items-formset">
-                                    {{ item_formset.management_form }}
-                                    
-                                    <div class="table-responsive">
-                                        <table class="table table-bordered">
-                                            <thead class="thead-light">
-                                                <tr>
-                                                    <th>Item Type</th>
-                                                    <th>Quantity</th>
-                                                    <th>Description</th>
-                                                    <th>Services</th>
-                                                    <th>Price per Item</th>
-                                                    <th>Total</th>
-                                                    <th>Action</th>
-                                                </tr>
-                                            </thead>
-                                            <tbody id="items-container">
-                                                {% for form in item_formset %}
-                                                <tr class="item-row">
-                                                    <td>{{ form.clothing_type|as_crispy_field }}</td>
-                                                    <td>{{ form.quantity|as_crispy_field }}</td>
-                                                    <td>{{ form.description|as_crispy_field }}</td>
-                                                    <td>
-                                                        <div class="form-check form-check-inline">
-                                                            {{ form.washing|as_crispy_field }}
-                                                        </div>
-                                                        <div class="form-check form-check-inline">
-                                                            {{ form.ironing|as_crispy_field }}
-                                                        </div>
-                                                        <br>
-                                                        <div class="form-check form-check-inline">
-                                                            {{ form.dry_clean|as_crispy_field }}
-                                                        </div>
-                                                        <div class="form-check form-check-inline">
-                                                            {{ form.stain_removal|as_crispy_field }}
-                                                        </div>
-                                                    </td>
-                                                    <td class="item-total">0.00</td>
-                                                    <td>
-                                                        {% if form.instance.pk %}
-                                                            {{ form.DELETE|as_crispy_field }}
-                                                        {% endif %}
-                                                        {{ form.id }}
-                                                    </td>
-                                                </tr>
-                                                {% endfor %}
-                                            </tbody>
-                                        </table>
-                                    </div>
-                                    
-                                    <button type="button" id="add-item" class="btn btn-sm btn-outline-primary">
-                                        <i class="fas fa-plus"></i> Add Another Item
-                                    </button>
+
+                                {{ item_formset.management_form }}
+
+                                <div class="table-responsive">
+                                    <table class="table table-bordered">
+                                        <thead>
+                                            <tr>
+                                                <th>Item Type</th>
+                                                <th>Qty</th>
+                                                <th>Description</th>
+                                                <th>Services</th>
+                                                <th>Action</th>
+                                            </tr>
+                                        </thead>
+
+                                        <tbody id="items-container">
+                                            {% for form in item_formset %}
+                                            <tr class="item-row">
+                                                <td>{{ form.clothing_type }}</td>
+                                                <td>{{ form.quantity }}</td>
+                                                <td>{{ form.description }}</td>
+                                                <td>
+                                                    {{ form.washing }}
+                                                    {{ form.ironing }}
+                                                    {{ form.dry_clean }}
+                                                    {{ form.stain_removal }}
+                                                </td>
+                                                <td class="text-center">
+                                                    {% if not forloop.first %}
+                                                    <button type="button" class="btn btn-danger btn-sm remove-item">
+                                                        <i class="fas fa-trash"></i>
+                                                    </button>
+                                                    {% endif %}
+                                                    {{ form.id }}
+                                                </td>
+                                            </tr>
+                                            {% endfor %}
+                                        </tbody>
+                                    </table>
                                 </div>
+
+                                <!-- Hidden empty form template -->
+                                <table style="display:none;">
+                                    <tbody id="empty-form">
+                                        <tr class="item-row">
+                                            <td>{{ item_formset.empty_form.clothing_type }}</td>
+                                            <td>{{ item_formset.empty_form.quantity }}</td>
+                                            <td>{{ item_formset.empty_form.description }}</td>
+                                            <td>
+                                                {{ item_formset.empty_form.washing }}
+                                                {{ item_formset.empty_form.ironing }}
+                                                {{ item_formset.empty_form.dry_clean }}
+                                                {{ item_formset.empty_form.stain_removal }}
+                                            </td>
+                                            <td class="text-center">
+                                                <button type="button" class="btn btn-danger btn-sm remove-item">
+                                                    <i class="fas fa-trash"></i>
+                                                </button>
+                                            </td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+
+                                <button type="button" id="add-item" class="btn btn-outline-primary mt-3">
+                                    <i class="fas fa-plus"></i> Add Another Item
+                                </button>
+
                             </div>
                         </div>
-                        
+
                         <!-- Order Details -->
                         <div class="card">
                             <div class="card-header bg-secondary text-white">
@@ -114,45 +119,17 @@
                             </div>
                             <div class="card-body">
                                 <div class="row">
-                                    <div class="col-md-6">
-                                        {{ order_form.expected_delivery_date|as_crispy_field }}
-                                    </div>
-                                    <div class="col-md-6">
-                                        {{ order_form.is_urgent|as_crispy_field }}
-                                    </div>
+                                    <div class="col-md-6">{{ order_form.expected_delivery_date|as_crispy_field }}</div>
+                                    <div class="col-md-6">{{ order_form.is_urgent|as_crispy_field }}</div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-md-12">
-                                        {{ order_form.special_instructions|as_crispy_field }}
-                                    </div>
-                                </div>
-                                
-                                <!-- Order Summary -->
-                                <div class="row mt-4">
-                                    <div class="col-md-12">
-                                        <div class="alert alert-info">
-                                            <h6><i class="fas fa-calculator"></i> Order Summary</h6>
-                                            <div class="row">
-                                                <div class="col-md-3">
-                                                    <strong>Total Items:</strong> <span id="total-items">0</span>
-                                                </div>
-                                                <div class="col-md-3">
-                                                    <strong>Subtotal:</strong> ₹<span id="subtotal">0.00</span>
-                                                </div>
-                                                <div class="col-md-3">
-                                                    <strong>Discount:</strong> ₹<span id="discount">0.00</span>
-                                                </div>
-                                                <div class="col-md-3">
-                                                    <strong>Grand Total:</strong> ₹<span id="grand-total">0.00</span>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
+                                    <div class="col-md-12">{{ order_form.special_instructions|as_crispy_field }}</div>
                                 </div>
                             </div>
                         </div>
+
                     </div>
-                    
+
                     <div class="card-footer">
                         <button type="submit" class="btn btn-success btn-lg">
                             <i class="fas fa-check-circle"></i> Create Order
@@ -161,6 +138,7 @@
                             <i class="fas fa-times"></i> Cancel
                         </a>
                     </div>
+
                 </form>
             </div>
         </div>
@@ -170,62 +148,29 @@
 
 {% block extra_js %}
 <script>
-$(document).ready(function() {
-    // Add new item row
-    $('#add-item').click(function() {
-        var formIdx = $('#id_items-TOTAL_FORMS').val();
-        var newRow = $('.item-row:first').clone(true);
-        
-        // Update form indices
-        newRow.find(':input').each(function() {
-            var name = $(this).attr('name').replace('-0-', '-' + formIdx + '-');
-            var id = 'id_' + name;
-            $(this).attr({'name': name, 'id': id}).val('').removeAttr('checked');
-        });
-        
-        // Clear values
-        newRow.find('input[type="text"], input[type="number"]').val('');
-        newRow.find('.item-total').text('0.00');
-        
-        // Append to table
-        $('#items-container').append(newRow);
-        $('#id_items-TOTAL_FORMS').val(parseInt(formIdx) + 1);
-        
-        // Recalculate totals
-        calculateTotals();
+document.addEventListener('DOMContentLoaded', function () {
+
+    const addButton = document.getElementById('add-item');
+    const totalForms = document.getElementById('id_items-TOTAL_FORMS');
+    const container = document.getElementById('items-container');
+    const emptyForm = document.getElementById('empty-form');
+
+    addButton.addEventListener('click', function () {
+        let formIndex = parseInt(totalForms.value);
+
+        let newRow = emptyForm.querySelector('tr').cloneNode(true);
+        newRow.innerHTML = newRow.innerHTML.replace(/__prefix__/g, formIndex);
+
+        container.appendChild(newRow);
+        totalForms.value = formIndex + 1;
     });
-    
-    // Calculate item total when quantity or price changes
-    $(document).on('input', 'input[name$="-quantity"], input[name$="-price_per_item"]', function() {
-        var row = $(this).closest('.item-row');
-        var quantity = parseFloat(row.find('input[name$="-quantity"]').val()) || 0;
-        var price = parseFloat(row.find('input[name$="-price_per_item"]').val()) || 0;
-        var total = quantity * price;
-        
-        row.find('.item-total').text(total.toFixed(2));
-        calculateTotals();
+
+    container.addEventListener('click', function (e) {
+        if (e.target.closest('.remove-item')) {
+            e.target.closest('tr').remove();
+        }
     });
-    
-    // Calculate order totals
-    function calculateTotals() {
-        var totalItems = 0;
-        var subtotal = 0;
-        
-        $('.item-row').each(function() {
-            var quantity = parseFloat($(this).find('input[name$="-quantity"]').val()) || 0;
-            var price = parseFloat($(this).find('input[name$="-price_per_item"]').val()) || 0;
-            
-            totalItems += quantity;
-            subtotal += quantity * price;
-        });
-        
-        $('#total-items').text(totalItems);
-        $('#subtotal').text(subtotal.toFixed(2));
-        $('#grand-total').text(subtotal.toFixed(2));
-    }
-    
-    // Initialize calculations
-    calculateTotals();
+
 });
 </script>
 {% endblock %}
