--- a/templates/laundry/customer_list.html
+++ b/templates/laundry/customer_list.html
@@ -4,6 +4,17 @@
 <div class="container-fluid py-4">
     <div class="d-flex justify-content-between align-items-center mb-4">
         <h2><i class="fas fa-users"></i> Customer List</h2>
+
+        <form method="get" class="d-flex gap-2">
+            <input type="text" name="q" class="form-control" placeholder="Search customers..."
+                value="{{ request.GET.q }}">
+            <button type="submit" class="btn btn-outline-primary"><i class="fas fa-search"></i></button>
+            {% if request.GET.q %}
+            <a href="{% url 'customer_list' %}" class="btn btn-outline-secondary" title="Clear Search"><i
+                    class="fas fa-times"></i></a>
+            {% endif %}
+        </form>
+
         <a href="{% url 'register_customer' %}" class="btn btn-primary">
             <i class="fas fa-user-plus"></i> Register Customer
         </a>
